test_regress/t/t_property_pexpr_unsup.out
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:130:22: Unsupported: Unclocked assertion
                                                     : ... note: In instance 't'
  130 |    assert property ((s_eventually a) implies (s_eventually a));
      |                      ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:130:47: Unsupported: Unclocked assertion
                                                     : ... note: In instance 't'
  130 |    assert property ((s_eventually a) implies (s_eventually a));
      |                                               ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:130:4: Unsupported: Unclocked assertion
                                                    : ... note: In instance 't'
  130 |    assert property ((s_eventually a) implies (s_eventually a));
      |    ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:132:22: Unsupported: Unclocked assertion
                                                     : ... note: In instance 't'
  132 |    assert property ((s_eventually a) iff (s_eventually a));
      |                      ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:132:43: Unsupported: Unclocked assertion
                                                     : ... note: In instance 't'
  132 |    assert property ((s_eventually a) iff (s_eventually a));
      |                                           ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:132:4: Unsupported: Unclocked assertion
                                                    : ... note: In instance 't'
  132 |    assert property ((s_eventually a) iff (s_eventually a));
      |    ^~~~~~
%Error: Exiting due to
